@@ -1,5 +1,12 @@
 2017-02-25  Bruno Haible  <bruno@clisp.org>
 
+	configure: Improve failure message when --with-ffcall cannot be honored.
+	* m4/ffcall.m4 (CL_LIBFFCALL_DOWNLOAD_URL): New macro.
+	(CL_FFCALL): Upon failure, suggest to build a downloaded tarball. Fix
+	the final configure invocation line.
+
+2017-02-25  Bruno Haible  <bruno@clisp.org>
+
 	configure: Give some advice when libffcall is not found.
 	* m4/ffcall.m4 (CL_FFCALL): If not found, set cl_cv_have_ffcall to
 	'no, consider installing GNU libffcall'.
